# fastapi_replicate_admin

./: .env  pyproject.toml
app/: main.py
app/api/v1/: article.py  auth.py  health_check.py  route.py
app/api/v1/system_manage/: apis.py  article.py  logs.py  menus.py  roles.py  users.py
app/core/: bgtask.py  dependency.py  init_app.py  log.py  middlewares.py  security.py  utils.py
app/schemas/: apis.py  article.py  logs.py  menus.py  roles.py  users.py
app/services/: api.py  article.py  log.py  menu.py  role.py  user.py
app/settings/: config.py
app/sqlmodel/: admin.py  base.py  public.py
migrations/app_system/: 0_20250531093946_init.py  0_20250531145441_init.py  0_20250531173142_init.py  0_20250601232946_init.py
